# aiavatar-pi

./: .gitignore  LICENSE  README.md  pyproject.toml
aiavatar_pi/: __init__.py  base.py  button.py  image_client.py  lipsync.py  motion_client.py
aiavatar_pi/audio/: __init__.py  alsa.py  base.py  pyaudio.py
aiavatar_pi/device/pc/: __init__.py  image_client.py  motion_client.py
aiavatar_pi/device/pi/: __init__.py  image_client.py  motion_client.py
aiavatar_pi/device/whisplay/: __init__.py  image_client.py  motion_client.py
aiavatar_pi/display/: base.py  framebuffer.py  ili9488.py  spi_display.py  st7789.py
examples/pc/: run_image.py  run_motion.py
examples/raspberrypi/: run_image.py  run_motion.py
examples/server/: run.py
examples/whisplay/: run_image.py  run_motion.py
